--- a/index.html
+++ b/index.html
@@ -8,26 +8,33 @@
       crossorigin="anonymous"
       defer
     ></script>
+		<link href="./src/index.css" rel="stylesheet" />
     <script src="./src/index.js" defer></script>
   </head>
 
   <body>
-    <video
-      controls
-      width="700px"
-      src="https://serranoarevalo.github.io/notflix/9bfd1023900e31286103369c803c7ee9.ogv"
-    ></video>
-    <div id="videoController">
-      <i id="playPauseBtn" class="fas fa-play"></i>
-      <i id="volume" class="fas fa-volume-up"></i>
-      <input
-        type="range"
-        step="0.1"
-        value="0.5"
-        min="0"
-        max="1"
-        id="volumeRange"
-      />
-    </div>
+		<div id="videoSection">
+			<video
+				src="https://serranoarevalo.github.io/notflix/9bfd1023900e31286103369c803c7ee9.ogv"
+			></video>
+			<div id="videoController">
+				<i id="playPauseBtn" class="fas fa-play"></i>
+				<span>
+					<span id="currentTime">00:00</span>
+					<span id="totalTime">00:00</span>
+				</span>
+				<i id="fullscreen" class="fas fa-solid fa-expand"></i>
+				<input
+					type="range"
+					step="0.1"
+					value="0.5"
+					min="0"
+					max="1"
+					id="volumeRange"
+				/>
+				<i id="volume" class="fas fa-volume-up"></i>
+				<input type="range" id="timeLine" step="1" value="0" min="0" style="width:100%"/>
+			</div>
+		</div>
   </body>
 </html>
